@@ -43,6 +43,15 @@ CHANGES
     multiple comma separated entries within the FROM clause.
     Useful when selecting from multiple-homed join() clauses.
     
+  - query.from_self(), query.union(), others which do a 
+    "SELECT * from (SELECT...)" type of nesting will do
+    a better job translating column expressions within the subquery
+    to the columns clause of the outer query.  This is
+    potentially backwards incompatible with 0.5, in that this 
+    may break queries with literal expressions that do not have labels
+    applied (i.e. literal('foo'), etc.)
+    [ticket:1568]
+    
   - the "dont_load=True" flag on Session.merge() is deprecated
     and is now "load=False".
 
